--- a/threat/templates/api/liste_api.html
+++ b/threat/templates/api/liste_api.html
@@ -376,7 +376,7 @@
 
                                             <td style="max-width: 200px;overflow: hidden;text-overflow: ellipsis;word-break: keep-all;white-space: nowrap;display: table-cell;">{{ i.key }}</td>
                                             <td class="center"><bouton class="btn waves-effect waves-light btn-outline-warning" style="width: 126px;" onclick="edit({{ i.id }})" >Edit</bouton></td>
-                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="dellete({{ i.id }})" >Delete</bouton></td>
+                                            <td class="center"><bouton class="btn waves-effect waves-light btn-outline-danger" style="width: 126px;" onclick="delta({{ i.id }})" >Delete</bouton></td>
                                         </tr>
                                     {% endfor %}
                                     </tbody>
@@ -424,28 +424,7 @@
     <!-- All Jquery -->
     <!-- ============================================================== -->
 
-    <script>
-        function dellete(id) {
-        Swal.fire({
-  title: 'Vous êtes sur ?',
-  text: "You won't be able to revert this!",
-  icon: 'warning',
-  showCancelButton: true,
-  confirmButtonColor: '#3085d6',
-  cancelButtonColor: '#d33',
-  confirmButtonText: 'Oui , Supprimé!'
-}).then((result) => {
-  if (result.value) {
-    Swal.fire(
-      'Supprimé!',
-      'L'API a été supprimé.',
-      'success'
-    )
-    window.location = '/delete_api/'+id ;
-  }
-})
-        }
-    </script>
+
     <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="{% static 'assets/libs/popper.js/dist/umd/popper.min.js' %}"></script>
@@ -467,6 +446,32 @@
     <script src="{% static 'dist/js/pages/datatable/datatable-basic.init.js' %}"></script>
     <script src="{% static 'assets/libs/sweetalert2/dist/sweetalert2.all.min.js' %}"></script>
     <script>
+        function delta2(i) {
+        Swal.fire({
+  title: 'Vous êtes sur ?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Oui , Supprimé!'
+}).then((result) => {
+  if (result.value) {
+    Swal.fire(
+      'Supprimé!',
+      'L'API a été supprimé.',
+      'success'
+    )
+    window.location = '/delete_api/'+i ;
+  }
+})
+        }
+    </script>
+    <script>
+    function delta(id)
+        {
+        window.location = '/delete_api/'+id ;
+         }
         function edit(id2)
         {
         window.location = '/edit_api/'+id2 ;
